# finland-flashcards

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
card_creator/: CARD_PROGRESS.md  README.md  card_progress.md
card_creator/orientation_guide/: README.md  chatgpt_card_generation_prompt.md  output.txt  split_cards.py
card_creator/pdf/: output.txt  split_cards.py
cards/orientation_guide/: 1.1_finlands_geografi_och_klimat.txt  1.2_finlands_befolkning.txt  1.4_huvuddragen_i_finlands_historia.txt  1.5_finlandsk_kultur_kalender_fester_och_traditioner.txt  2.1_det_finlandska_samhallets_olika_sektorer.txt  2.2_valfardssamhallets_utveckling_i_finland.txt  2.3_finlands_forvaltning.txt  2.4_finlands_naringsliv_och_ekonomiska_system.txt  3.1_uppehallstillstand_och_finskt_medborgarskap.txt  3.2_praktiska_saker_som_ar_bra_att_kanna_till.txt  3.3_grundlaggande_fakta_om_boende.txt  3.4_integration_i_det_nya_hemlandet.txt  4.1_finlandska_familjer_forr_och_nu.txt  4.2_aktenskap_och_samboende.txt  4.3_manga_slag_av_familjer.txt  4.4_barnets_omvardnad_och_tjanster_for_barnfamiljer.txt  4.5_stod_for_familjer_i_problemsituationer.txt  4.6_andra_halsovards-_och_socialtjanster.txt  4.7_nar_familjen_flyttar_till_finland.txt
cards/pdf/: 1.3_hurudana_ar_finlandarna.txt
data/articles/: Miraklet i Norden.odt  Samhället vi lever i Fattigdomens historia och välfärdssamhällets framväxt och ord  och frågor  TILL FILMEN.docx
data/infofinland/: .gitignore  LICENSE  README.md  crawler.py  requirements.txt
data/infofinland/content/: about-the-service.html  accessibility.html  (+26 more)
(+207 files in other folders)
