[tool.poetry]
name = "finland-flashcards"
version = "0.1.0"
description = "Scripts and data to generate Anki flashcards for Finland orientation and related sources"
authors = ["Vadim Pushtaev <pushtaev.vm@gmail.com>"]
license = "MIT"
readme = "AGENTS.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

